<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="87dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/user"
                tools:ignore="ImageContrastCheck" />
            <TextView
                android:id="@+id/UserName"
                android:layout_width="200dp"
                android:layout_height="22dp"
                android:text="@string/username"
                android:textColor="#9575CD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.132" />
            <TextView
                android:id="@+id/BalanceText"
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:text="@string/balance"
                android:textColor="#7986CB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.173" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="190sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180sp"
                android:layout_height="150dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/bank" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weclome_to_continental_bank"
                android:textColor="#9575CD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.581"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.181" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/Logout"
                android:layout_width="60dp"
                android:layout_height="47dp"
                android:layout_marginLeft="9sp"
                android:background="@null"
                android:contentDescription="@string/todo"
                app:srcCompat="@android:drawable/ic_delete"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        </LinearLayout>






    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="190sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ProfileBTN"
                android:layout_width="109dp"
                android:layout_height="94dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:layout_marginLeft="25sp"
                app:srcCompat="@android:drawable/ic_dialog_info"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
            <TextView
                android:id="@+id/txtprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="#90CAF9"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="60sp"
                android:layout_marginBottom="70sp"
                tools:ignore="TextContrastCheck" />
            <ImageButton
                android:id="@+id/EditBTN"
                android:layout_width="109dp"
                android:layout_height="94dp"
                android:background="@null"
                android:layout_marginLeft="25sp"
                android:contentDescription="@string/todo"
                app:srcCompat="@android:drawable/ic_menu_edit"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
            <TextView
                android:id="@+id/txtedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_data"
                android:textColor="#90CAF9"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="48sp"
                android:layout_marginBottom="50sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/TransactionsBTN"
                android:layout_width="109dp"
                android:layout_height="94dp"
                android:layout_marginLeft="25sp"
                android:background="@null"
                android:contentDescription="@string/todo"
                app:srcCompat="@android:drawable/ic_popup_sync"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
            <TextView
                android:id="@+id/txtTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactions"
                android:textColor="#90CAF9"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="35sp"
                android:layout_marginBottom="70sp"/>
            <ImageButton
                android:id="@+id/CurrencyConvertBTN"
                android:layout_width="109dp"
                android:layout_height="94dp"
                android:layout_marginLeft="25sp"
                android:background="@null"
                android:contentDescription="@string/todo"
                app:srcCompat="?android:attr/actionModeWebSearchDrawable"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
                tools:targetApi="lollipop" />
            <TextView
                android:id="@+id/txtcurreny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_convertor"
                android:textColor="#90CAF9"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="25sp"
                android:layout_marginBottom="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.834"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.708"
                tools:ignore="TextContrastCheck" />
            </LinearLayout>
    </LinearLayout>
</LinearLayout>

































