<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical">
    <TextView
        android:id="@+id/welcomemsg"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginLeft="75sp"
        android:text="Welcome Sir"
        android:textColor="#90CAF9"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="370dp" />
    <TextView
        android:id="@+id/hisnameprofile"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginLeft="75sp"
        android:text="@string/myusername"
        android:textColor="#90CAF9"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="370dp" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="190sp"
        android:layout_height="150sp"
        android:contentDescription="@string/todo"
        android:layout_marginLeft="75sp"
        app:srcCompat="@drawable/user"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="122dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:contentDescription="@string/todo"
        android:layout_marginLeft="25sp"
        app:srcCompat="@drawable/money"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="122dp" />
        <TextView
            android:id="@+id/hisBalanceProfile"
            android:layout_width="173dp"
            android:layout_height="40dp"
            android:layout_marginLeft="35sp"
            android:text="@string/mybalance"
            android:textColor="#90CAF9"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:contentDescription="@string/todo"
            android:layout_marginLeft="25sp"
            app:srcCompat="@drawable/smartphone"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="122dp" />
        <TextView
            android:id="@+id/hisPhoneProfile"
            android:layout_width="208dp"
            android:layout_height="36dp"
            android:layout_marginLeft="35sp"
            android:layout_marginTop="15sp"
            android:text="@string/myphone"
            android:textColor="#90CAF9"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="591dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:contentDescription="@string/todo"
            android:layout_marginLeft="25sp"
            app:srcCompat="@drawable/mail"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="122dp" />
        <TextView
            android:id="@+id/hismailprofile"
            android:layout_width="260dp"
            android:layout_height="42dp"
            android:text="@string/myemail"
            android:textColor="#90CAF9"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="35sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="483dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="70sp"
            android:layout_height="100sp"
            android:contentDescription="@string/todo"
            android:layout_marginLeft="25sp"
            app:srcCompat="@drawable/information"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="122dp" />
        <TextView
            android:id="@+id/imageView9"
            android:layout_width="260dp"
            android:layout_height="95sp"
            android:text="If there is any wrong data you can edit it"
            android:textColor="#F90000"
            android:textSize="25sp"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="35sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="483dp" />
    </LinearLayout>



</LinearLayout>